<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="10dp"
    tools:context=".MainActivity">



    <TextView
        android:text="@string/title"
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_edit"
        android:hint="@string/name_placeholder"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cheese_spinner"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chilli_placeholder"
        android:id="@+id/chilli_spinner"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pork_placeholder"
        android:id="@+id/pork_spinner"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mushroom_placeholder"
        android:id="@+id/mushroom_spinner"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pineapple_placeholder"
        android:id="@+id/pineapple_spinner"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chicken_placeholder"
        android:id="@+id/chicken_spinner"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_pizza"
        android:id="@+id/make_pizza"/>

</LinearLayout>
